@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(plot,totalReads)
 S3method(print,bed)
 S3method(print,fa)
 S3method(print,featureCounts)
